Improvement in Factory
- Improvement for Java 11 when loading class in Factory